// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the ToastContainer Component correctly 1`] = `
<div
  className="sc-kEYyzF dbhPJw"
>
  <div
    className="sc-kkGfuU SRTsL sc-hMqMXs dUGKCZ"
  >
    <div
      className="sc-iAyFgw irVncE sc-hMqMXs bjPpVQ"
      color="success"
    >
      <i
        className="material-icons  sc-jWBwVP kXViZK"
        color="white"
        onClick={undefined}
        scale="l"
      >
        check_circle
      </i>
    </div>
    <div
      className="sc-hSdWYo oJwFK sc-hMqMXs elPfCT"
    >
      Text
    </div>
    <div
      className="sc-eHgmQL fPasoh sc-hMqMXs iwfhZv"
    >
      <div
        className="sc-cvbbAY kjIvxo"
      >
        <i
          className="material-icons  sc-jWBwVP dDEFQv"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
  <div
    className="sc-kkGfuU SRTsL sc-hMqMXs dUGKCZ"
  >
    <div
      className="sc-iAyFgw fWQLw sc-hMqMXs bjPpVQ"
      color="error"
    >
      <i
        className="material-icons  sc-jWBwVP kXViZK"
        color="white"
        onClick={undefined}
        scale="l"
      >
        error_outline
      </i>
    </div>
    <div
      className="sc-hSdWYo oJwFK sc-hMqMXs elPfCT"
    >
      Text
    </div>
    <div
      className="sc-eHgmQL fPasoh sc-hMqMXs iwfhZv"
    >
      <div
        className="sc-cvbbAY kjIvxo"
      >
        <i
          className="material-icons  sc-jWBwVP dDEFQv"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the ToastContainer Component correctly 2`] = `
<div
  className="sc-kEYyzF iRKLnV"
>
  <div
    className="sc-kkGfuU SRTsL sc-hMqMXs dUGKCZ"
  >
    <div
      className="sc-iAyFgw irVncE sc-hMqMXs bjPpVQ"
      color="success"
    >
      <i
        className="material-icons  sc-jWBwVP kXViZK"
        color="white"
        onClick={undefined}
        scale="l"
      >
        check_circle
      </i>
    </div>
    <div
      className="sc-hSdWYo oJwFK sc-hMqMXs elPfCT"
    >
      Text
    </div>
    <div
      className="sc-eHgmQL fPasoh sc-hMqMXs iwfhZv"
    >
      <div
        className="sc-cvbbAY kjIvxo"
      >
        <i
          className="material-icons  sc-jWBwVP dDEFQv"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
  <div
    className="sc-kkGfuU SRTsL sc-hMqMXs dUGKCZ"
  >
    <div
      className="sc-iAyFgw fWQLw sc-hMqMXs bjPpVQ"
      color="error"
    >
      <i
        className="material-icons  sc-jWBwVP kXViZK"
        color="white"
        onClick={undefined}
        scale="l"
      >
        error_outline
      </i>
    </div>
    <div
      className="sc-hSdWYo oJwFK sc-hMqMXs elPfCT"
    >
      Text
    </div>
    <div
      className="sc-eHgmQL fPasoh sc-hMqMXs iwfhZv"
    >
      <div
        className="sc-cvbbAY kjIvxo"
      >
        <i
          className="material-icons  sc-jWBwVP dDEFQv"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
</div>
`;
